# nih_plug_spectrum_analyser

./: .gitignore  ArchPlan.md  CLAUDE.md  Cargo.toml  PLAN.md  PLAN2.md  README.md  VISUALIZER_PLAN.md  build.sh  bundler.toml  is-processing.md  run.sh  spectrum_calibration_debug.md
plan/: Diopser.md  PLAN.md  PLAN2.md  PLAN3.md  improvements.md  math_techniques.md  rust-dsp-crates.md  spectrum.md  tutorial_plan.md
scripts/: build.sh  run.sh
src/: buffer.rs  constants.rs  editor.rs  lib.rs
src/audio/: audio_engine.rs  buffer.rs  constants.rs  errors.rs  fft.rs  fft_engine.rs  meter.rs  meter_communication.rs  meter_engine.rs  mod.rs  processor.rs  sample_buffer_engine.rs  spectrum.rs  spectrum_analyzer.rs  spectrum_engine.rs  window_functions.rs
src/ui/: gain_knob_display.rs  grid_overlay.rs  meter.rs  meter_display.rs  mod.rs  spectrum.rs  spectrum_display.rs  svg_knob.rs
src/ui/shaders/: mod.rs
src/ui/shaders/grid/: grid.wgsl  mod.rs  pipeline.rs
src/ui/style/: knob.rs  mod.rs  theme.rs
