[package]
name = "plugin_learn"
version = "0.1.0"
edition = "2021"
authors = ["Cmdv <info@cmdv.me>"]
license = "GPL-3.0-or-later"
homepage = "www.cmdv.me"
description = "A short description of your plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
# Thread-safe audio buffering
triple_buffer = "8.0"
# For atomic operations
atomic_float = "0.1"
realfft = "3.3"
apodize = "1.0"

# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
