[package]
name = "spectrum_analyser"
version = "0.1.0"
edition = "2021"
authors = ["Cmdv <info@cmdv.me>"]
license = "GPL-3.0-or-later"
homepage = "www.cmdv.me"
description = "A Spectrum analyser with potential"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { path = "../nih-plug", features = ["assert_process_allocs"] }
nih_plug_iced = { path = "../nih-plug/nih_plug_iced", features = ["canvas", "svg"] }

# Thread-safe audio buffering
triple_buffer = "8.0"
# For atomic operations
atomic_float = "0.1"
realfft = "3.3"
apodize = "1.0"
dasp = "0.11.0"
libm = "0.2.15"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
