[package]
name = "spectrum_analyser"
version = "0.1.0"
edition = "2021"
authors = ["Cmdv <info@cmdv.me>"]
license = "GPL-3.0-or-later"
homepage = "www.cmdv.me"
description = "A Spectrum analyser with potential"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# This fork of nih_plug exposes process_stopped
nih_plug = { git = "https://github.com/Cmdv/nih-plug.git", branch = "expose-process-stopped", features = ["assert_process_allocs"] }
# This fork of nih_plug_iced is updated to use iced 0.13
nih_plug_iced = { git = "https://github.com/Cmdv/nih_plug_iced.git", features = ["canvas", "svg"] }

# Thread-safe audio buffering
triple_buffer = "8.0"
# For atomic operations
atomic_float = "0.1"
realfft = "3.3"
apodize = "1.0"
dasp = "0.11.0"
libm = "0.2.15"
# For custom error types
thiserror = "1.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
